--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "momentjs": "^2.0.0",
-    "random": "^3.0.6"
+    "random": "^3.0.6",
+    "random-item": "^4.0.1",
+    "randomstring": "^1.2.1"
   }
 }
