--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "express.js",
-  "type": "module",
+  "type": "CommonJS",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -35,6 +35,7 @@
     "momentjs": "^2.0.0",
     "mongoose": "^6.2.0",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.1",
     "pug": "^3.0.2",
     "random": "^3.0.6",
     "random-item": "^4.0.1",
