--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "express-session": "^1.17.2",
     "firebase-admin": "^10.0.2",
     "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.15",
     "moment": "^2.29.1",
     "momentjs": "^2.0.0",
     "mongoose": "^6.2.0",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.1",
+    "passport": "^0.5.2",
+    "passport-twitter": "^1.0.4",
     "pug": "^3.0.2",
     "random": "^3.0.6",
     "random-item": "^4.0.1",
