--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
     "@types/express": "^4.17.13",
+    "cluster": "^0.7.7",
     "connect-mongo": "^4.6.0",
     "connect-redis": "^6.1.1",
     "cookie-parser": "^1.4.6",
@@ -42,7 +43,9 @@
     "momentjs": "^2.0.0",
     "mongoose": "^6.2.0",
     "mysql": "^2.18.1",
+    "nginx": "^1.0.3",
     "normalizr": "^3.6.1",
+    "os": "^0.1.2",
     "passport": "^0.5.2",
     "passport-twitter": "^1.0.4",
     "pug": "^3.0.2",
