--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.16.8",
     "@types/express": "^4.17.13",
     "cluster": "^0.7.7",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "connect-redis": "^6.1.1",
     "cookie-parser": "^1.4.6",
@@ -31,13 +32,14 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "engine": "^1.0.0",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "firebase-admin": "^10.0.2",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.15",
+    "log4js": "^6.4.3",
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
     "momentjs": "^2.0.0",
@@ -48,6 +50,7 @@
     "os": "^0.1.2",
     "passport": "^0.5.2",
     "passport-twitter": "^1.0.4",
+    "pino": "^7.9.1",
     "pug": "^3.0.2",
     "random": "^3.0.6",
     "random-int": "^3.0.0",
@@ -57,6 +60,7 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.2",
+    "winston": "^3.6.0",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
