--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mongoose": "^6.2.0",
     "mysql": "^2.18.1",
     "nginx": "^1.0.3",
+    "nodemailer": "^6.7.3",
     "normalizr": "^3.6.1",
     "os": "^0.1.2",
     "passport": "^0.5.2",
