--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
     "@types/express": "^4.17.13",
+    "bcryptjs": "^2.4.3",
     "cluster": "^0.7.7",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
@@ -31,11 +32,13 @@
     "dayjs": "^1.10.7",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
+    "encrypt": "0.0.1",
     "engine": "^1.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "firebase-admin": "^10.0.2",
+    "helpers": "0.0.6",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.15",
