--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.2",
+    "twilio": "^3.76.0",
     "winston": "^3.6.0",
     "yargs": "^17.3.1"
   },
