--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "express.js",
   "type": "CommonJS",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/api.test.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
     "@types/express": "^4.17.13",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cluster": "^0.7.7",
     "compression": "^1.7.4",
@@ -69,6 +70,11 @@
     "yargs": "^17.3.1"
   },
   "devDependencies": {
+    "Faker": "^0.7.2",
+    "chai": "^4.3.6",
+    "faker": "^6.6.6",
+    "mocha": "^10.0.0",
+    "supertest": "^6.2.3",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "webpack": "^5.66.0",
