--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "encrypt": "0.0.1",
     "engine": "^1.0.0",
     "express": "^4.17.3",
+    "express-graphql": "^0.12.0",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "firebase-admin": "^10.0.2",
+    "graphql": "^16.4.0",
     "helpers": "0.0.6",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
