--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
   "devDependencies": {
     "Faker": "^0.7.2",
     "chai": "^4.3.6",
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
     "faker": "^6.6.6",
     "mocha": "^10.0.0",
     "supertest": "^6.2.3",
