--- a/data.env
+++ b/data.env
@@ -1,2 +1,3 @@
 PORT = 8080
 TEST_MAIL = chester.ritchie80@ethereal.email
+mongo_server = 'mongodb+srv://Boimen11:diehose11@cluster0.lao3a.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
